force-app/main/default/objects/Developer_Checklist__c/Developer_Checklist__c.object-meta.xml
<CustomObject>
    <description>Used for SF Developer Check List</description>
    <label>Developer Checklist</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Quality Check List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>