force-app/main/default/objects/Developer_Checklist__c/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <label>Applicable For?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Omni Components</fullName>
            </value>
            <value>
                <fullName>Core Components</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>