force-app/main/default/objects/Developer_Checklist__c/fields/Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comments__c</fullName>
    <label>Developer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>