force-app/main/default/objects/Developer_Checklist__c/fields/Governanace_Item__c.field-meta.xml
<CustomField>
    <fullName>Governanace_Item__c</fullName>
    <label>Governanace Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>